Fix hint icon being invisible

--- a/src/components/cards/project/styles.scss
+++ b/src/components/cards/project/styles.scss
@@ -40,6 +40,11 @@
             margin-left: 0;
         }
     }
+
+    .hint {
+        left: 1.5rem;
+        right: unset;
+    }
 }
 
 .ProjCard-container {
